[gd_scene load_steps=4 format=3 uid="uid://hruyvpotgvnt"]

[ext_resource type="Script" path="res://addons/editor/state_machine_graph_edit.gd" id="1_rir0t"]
[ext_resource type="PackedScene" uid="uid://bfee2lejwowxd" path="res://addons/editor/nodes/state_graph_node.tscn" id="2_kxinh"]
[ext_resource type="Script" path="res://addons/editor/nodes/state_graph_node.gd" id="3_eor73"]

[node name="StateMachineGraphEdit" type="GraphEdit"]
script = ExtResource("1_rir0t")

[node name="StateGraphNode" type="GraphNode" parent="." instance=ExtResource("2_kxinh")]
layout_mode = 0
offset_right = 201.0
offset_bottom = 94.0
mouse_filter = 1
position_offset = Vector2(150, 0)
title = "UpMoveState"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0, 0.588235, 0.109804, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.611765, 0, 0, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("3_eor73")

[node name="@GraphNode@39601" type="GraphNode" parent="." instance=ExtResource("2_kxinh")]
layout_mode = 0
offset_right = 201.0
offset_bottom = 94.0
mouse_filter = 1
position_offset = Vector2(-75, 129.904)
title = "DownMoveState"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0, 0.588235, 0.109804, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.611765, 0, 0, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("3_eor73")

[node name="@GraphNode@39610" type="GraphNode" parent="." instance=ExtResource("2_kxinh")]
layout_mode = 0
offset_right = 201.0
offset_bottom = 94.0
mouse_filter = 1
position_offset = Vector2(-75, -129.904)
title = "GrowState"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0, 0.588235, 0.109804, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.611765, 0, 0, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("3_eor73")

[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
[connection signal="end_node_move" from="." to="." method="_on_end_node_move"]
